--- a/Connex.Business/StaticFiles/ConfirmEmailBody.html
+++ b/Connex.Business/StaticFiles/ConfirmEmailBody.html
@@ -51,7 +51,7 @@
             padding: 10px 20px;
             margin-top: 20px;
             background-color: #007bff;
-            color: #fff;
+            color: #fff !important;
             text-decoration: none;
             border-radius: 5px;
             font-size: 16px;
